<resources>
    //for all activities
    <string name="app_name">Bustalk</string>
    <string name="space">   </string>

    //for LoginPage
    <string name="id_hint">\t Driver ID</string>
    <string name="bus_number_hint">\t Bus Number</string>
    <string name="name_hint">\t Driver Name</string>
    <string name="login">LOG IN</string>
    <string name="ip_hint">\t IP</string>
    <string name="login_attempt">Attempt to log in</string>
    <string name="error_in_pushing">Error in pushing data to web server</string>

    //for PushPage
    <string name="logout">LOG OUT</string>
    <string name="send">SEND</string>
    <string name="stop">STOP</string>
    <string name="logoutStatus">Logging Out......</string>
    <string name="output_feedback">/ 5.0 </string>
</resources>
